# Annland

./: README
maynard/: .gitignore  AUTHORS  LICENSE  TODO  maynard-applications.menu.in  maynard.in  maynard.ini.in  meson.build  meson_options.txt
maynard/applications/: meson.build  weston-launch.desktop.in
maynard/applications/weston-terminal/: meson.build  weston-terminal.desktop.in
maynard/client/: clock-indicator.c  clock-indicator.h  favorites.c  indicator.c  indicator.h  launcher.c  launcher.h  maynard.c  meson.build  panel.c  panel.h  shell-app-system.c  shell-helper.c  style.css  volume-indicator.c  volume-indicator.h
maynard/data/: meson.build  org.maynard.gschema.xml
maynard/debian/: changelog  control  copyright
maynard/desktop-shell/: README.md  exposay.c  meson.build  shell.c  shell.h
maynard/desktop-shell/shared/: meson.build
maynard/po/: POTFILES.in  meson.build
maynard/protocol/: meson.build  weston-desktop-shell.xml
maynard/shell/: clock.c  favorites.c  launcher.c  maynard.c  maynard.gresource.xml  meson.build  shell-app-system.h  style.css  vertical-clock.c
weston-9.0.0/clients/: meson.build  opengles-simple-egl.c
weston-9.0.0/debian/: README.Debian  changelog  control  copyright  libweston-9-0.install  libweston-9-0.symbols  libweston-9-dev.install  rules  watch  weston.install  weston.lintian-overrides  weston.manpages  weston.postinst
weston-9.0.0/libweston/: launcher-direct.c
